[project]
name = "s5"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "navh", email = "amos@amoshebb.com" }
]
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/s5"]
